<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@color/backgroundLogin">

    <EditText
        android:id="@+id/login_email"
        android:background="#88ffff"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:hint="@string/loginEMail"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/login_password"
        android:background="#88ffff"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:hint="@string/loginPass"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:inputType="textEmailAddress"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/loginButton"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="430dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetID"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="460dp"/>



</RelativeLayout>