<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordFragment"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget"
        android:textSize="45sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/forget_email"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="150dp"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@drawable/button"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/forget_email"
        android:layout_marginTop="20dp"/>


</RelativeLayout>